--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
   },
   "homepage": "https://github.com/AngusFu/sprite-css#readme",
   "dependencies": {
+    "css-box-shadow": "^1.0.0-3",
     "css-value": "^0.0.1",
     "dumper.js": "^1.1.1",
     "jest": "^23.5.0",
     "lodash": "^4.17.10",
     "postcss": "^7.0.2",
+    "postcss-discard-comments": "^4.0.0",
+    "postcss-minify-gradients": "^4.0.0",
+    "postcss-normalize-whitespace": "^4.0.0",
     "postcss-reduce-transforms": "^4.0.0",
     "postcss-safe-parser": "^4.0.1",
     "postcss-value-parser": "^3.3.0",
